tket/tket-qsystem/src/llvm/snapshots/tket_qsystem__llvm__random__test__emit_random_codegen@pre-mem2reg@llvm21.snap
---
source: tket/tket-qsystem/src/llvm/random.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define internal {} @_hl.main.1({} %0, i64 %1) !dbg !3 {
alloca_block:
  %"0" = alloca {}, align 8
  %"2_0" = alloca {}, align 8
  %"2_1" = alloca i64, align 8
  %"4_0" = alloca {}, align 8
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store {} %0, ptr %"2_0", align 1
  store i64 %1, ptr %"2_1", align 4
  %"2_01" = load {}, ptr %"2_0", align 1
  %"2_12" = load i64, ptr %"2_1", align 4
  call void @random_advance(i64 %"2_12"), !dbg !10
  store {} %"2_01", ptr %"4_0", align 1, !dbg !10
  %"4_03" = load {}, ptr %"4_0", align 1
  store {} %"4_03", ptr %"0", align 1
  %"04" = load {}, ptr %"0", align 1
  ret {} %"04"
}

declare void @random_advance(i64)

!llvm.module.flags = !{!0}
!llvm.dbg.cu = !{!1}

!0 = !{i32 2, !"Debug Info Version", i32 3}
!1 = distinct !DICompileUnit(language: DW_LANG_Python, file: !2, producer: "hugr_llvm_test", isOptimized: false, runtimeVersion: 0, emissionKind: FullDebug)
!2 = !DIFile(filename: "/cmJrSnVYeXFf/zCkHdtWCCnkJhPKiWSKICgZuRNRvR/mbrfVq.gpy.py", directory: "/lPNzlV/ClAphFG/yrhvZs/eDgUn/eIVwAutKJHaZEPSZwPXPeycUvnujGxZ")
!3 = distinct !DISubprogram(name: "_hl.main.1", linkageName: "_hl.main.1", scope: null, file: !4, line: 25254, type: !5, scopeLine: 25255, spFlags: DISPFlagLocalToUnit | DISPFlagDefinition, unit: !1)
!4 = !DIFile(filename: "/cmJrSnVYeXFf/zCkHdtWCCnkJhPKiWSKICgZuRNRvR/mbrfVq.gpy.py", directory: "")
!5 = !DISubroutineType(types: !6)
!6 = !{!7, !7, !9}
!7 = !DICompositeType(tag: DW_TAG_structure_type, name: "{}", file: !2, align: 8, elements: !8)
!8 = !{}
!9 = !DIBasicType(name: "i64", size: 64, encoding: DW_ATE_unsigned)
!10 = !DILocation(line: 27062, column: 402, scope: !3)
